# oaresearch

./: .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
notebooks/: example_N64_J7.ipynb
oaresearch/: __init__.py  analyse_maximal_designs.py  filetools.py  htmltools.py  job_utils.py  misc_utils.py  research.py  research_conference.py
oaresearch/pythondevelop/: ABhelper.py  article-dof-example2.py  functions_evenodd.py  researchOA.py
scripts/: analyse_conference_design_extensions.py  analyse_maximal_designs.py  doubleconference_split.py  doubleconference_split_analyse.py  generate_conference_designs.py  generate_conference_webpage.py  generate_website_oaimage.py  get_artifacts.py  quantum_states_from_oa.py  refactor_model_matrix.py
scripts/articles/: article-dof-example-appendix.py  conference_designs_running_times.py  example-A3-A4-D.py
scripts/evenodd/: analyse_evenodd_maxj.py  evenodd_cluster.py
tests/: test_filetools.py  test_htmltools.py  test_misc_utils.py  test_research.py  test_research_conference.py
