[metadata]
name = oaresearch
version = attr: oaresearch.version.__version__
description = "Research part of the OApackage",
long_description=file: README.md,
long_description_content_type='text/markdown',
author_email='pieter.eendebak@gmail.com',
license="BSD",
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: BSD License


[options]
include_package_data = True
install_requires =
    numpy>=1.26
    scanf
    OApackage>=2.7.10
    matplotlib
    twine
    ruff
    json_tricks
    jsmin
    htmlmin
    coreapi
    joblib
    coverage
    mock
packages = find:
python_requires = >=3.11


